# reka-sdk-python

./: .fernignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/reka/: __init__.py  client.py  environment.py  version.py
src/reka/chat/: client.py
src/reka/chat/types/: __init__.py  chat_chat_response.py
src/reka/core/: client_wrapper.py
src/reka/models/: client.py
src/reka/text/: __init__.py  client.py
src/reka/text/types/: __init__.py  chat_chat_post_response.py
src/reka/types/: __init__.py  chat_message.py  chat_message_chunk.py  chat_message_chunk_content_item.py  chat_message_input_content_item.py  chat_message_output_content_item.py  chat_response.py  chat_role.py  chat_round.py  chat_round_chunk.py  chat_round_chunk_content_item.py  chat_round_input_content_item.py  chat_round_output_content_item.py  chunk_chat_response.py  chunk_message_response.py  chunk_round_response.py  content.py  finish_reason.py  media_type.py  message_response.py  model.py  round_response.py  tool.py  tool_call.py  tool_choice.py  tool_output.py  typed_media_content.py  typed_text.py  usage.py
src/reka/v2/: __init__.py  errors.py
src/reka/v2/api/: chat.py  dataset.py  driver.py  job.py  models.py  retrieval.py
tests/custom/: test_client.py
